--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1 class="deepshadow"> ELLIE'S SHEEP SQUAD</h1>
+    <h1 class="deepshadow"> ELLIE'S SHEEP WARS</h1>
     <ul class="tilesWrap">
         <li>
     
@@ -223,7 +223,6 @@
       </div>
 </li>
 
-</li>
 
 
 <li>
@@ -279,8 +278,8 @@
  
 
   <!-- Modal content -->
-  <div class="modal-content3">
-    <span class="close3">&times;</span>
+  <div class="modal-content4">
+    <span class="close4">&times;</span>
     <div class="heading-frame heading-frame4">
         <h2>MEET<br/> DOROTHY</h2>
     </div>
@@ -295,7 +294,8 @@
       </div>
 </li>
 
-</li>
+
+
 
 
       
@@ -390,31 +390,8 @@ window.onclick = function(event) {
   }
 }
 
-// Get the modal
-var modal4 = document.getElementById("myModal4");
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn4");
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close4")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal4.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal4.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal4.style.display = "none";
-  }
-}
 
 
 
