--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sheep Wars</title>
     <link rel="stylesheet" type="text/css" href="sheep.css"/>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
@@ -371,7 +371,7 @@
 <div class="vote"> 
     <h2>CLICK TO VOTE FOR YOUR FAVOURITE!</h2> 
    
-   <iframe src="http://www.strawpoll.me/embed_1/19625034" style="width:100%;height:426px;border:0;">Loading poll...</iframe>
+   <iframe src="http://www.strawpoll.me/embed_1/19625034" style="width:100%;height:650px;border:0;">Loading poll...</iframe>
 
 </div>
 <script>
