--- a/index.html
+++ b/index.html
@@ -370,9 +370,12 @@
 
 <div class="vote"> 
     <h2>CLICK TO VOTE FOR YOUR FAVOURITE!</h2> 
+    
    
    <iframe src="http://www.strawpoll.me/embed_1/19625034" style="width:100%;height:650px;border:0;">Loading poll...</iframe>
-
+   
+    <a href="https://www.strawpoll.me/19625034" style="color:white; " class="btn" onmousedown="follow();">Vote <i class="fas fa-vote-yea"></i></a>
+ 
 </div>
 <script>
 
